# data

./: CMakeLists.txt
cmake/: FindNTL.cmake  Symbols.cmake
include/data/: list.hpp  map.hpp  sequence.hpp  slice.hpp
include/data/list/: linked_list.hpp
include/data/math/: field.hpp  nonnegative.hpp  power.hpp
include/data/math/number/gmp/: N.hpp  Q.hpp  Z.hpp  mpq.hpp  mpz.hpp
include/data/networking/: URL.hpp  Websocket_Client.hpp
include/data/tools/: cycle.hpp  functional_queue.hpp  iterator_list.hpp
include/sv/compat/: endian.h
src/data/include/data/arithmetic/: carry.hpp
src/data/math/number/gmp/: N.cpp  Z.cpp  mpz.cpp
src/data/networking/: Websocket_Client.cpp
test/: CMakeLists.txt  testAbs.cpp  testWebsockets.cpp
